# jrpc-server

./: README.md  cabal.project  jrpc-server.cabal  jrpc.cabal
app/: Main.hs
src/: JRPC.hs
src/JRPC/: Internal.hs  Server.hs  Types.hs
src/JRPC/Server/: Internal.hs  Types.hs
