cabal-version:      3.4
name:               jrpc-server
version:            0.1.0.0
license:            MIT
author:             Yan Shkurinsky
maintainer:         yan.shkurinsky@gmail.com
category:           Network
build-type:         Simple

common extensions
    default-extensions: LambdaCase BlockArguments OverloadedStrings DerivingVia

common warnings
    ghc-options: -Wall

library
    import:           warnings, extensions
    exposed-modules:  JRPC.Server
    other-modules:    JRPC.Server.Internal
    build-depends:    base, ghc-prim, aeson, text, vector, unordered-containers, scientific, jrpc-types, bytestring
    hs-source-dirs:   src
    default-language: GHC2021


executable example
    import:           warnings, extensions
    build-depends:    jrpc-server, vector, text, aeson, base
    main-is:          Main.hs
    hs-source-dirs:   app

